k8s/nginx-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 4000
    targetPort: 80
